--- a/Index.html
+++ b/Index.html
@@ -3,15 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="scss/main.css">
+
+
     <title>Document</title>
 </head>
 
 <body>
-    <header>le header du site</header>
+    <header><nav class="navbar navbar-expand-lg bg-primary text-white" data-bs-theme="dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">Viola Corp</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="/">Accueil</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/galerie">Galerie</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Nos Guitares</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Nos basses</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Mon compte</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Connexion/Deconnexion</a>
+              </li>
+              <li class="nav-item"></li>
+                <a class="nav-link" href="#"><i class="bi bi-cart4"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav></header>
 
     <main id="main-page"></main>
 
     <footer>le footer du site</footer>
     <script type="module" src="router/router.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
