--- a/pages/home.html
+++ b/pages/home.html
@@ -1,3 +1,107 @@
-<h1>Bienvenue sur Viola Corp</h1>
+<div id="carouselExampleIndicators" class="carousel slide">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <!-- Slide 1 -->
+      <div class="carousel-item active">
+        <img src="/images/guitare hero scene.jpg" class="d-block w-100" alt="Image 1">
+        <div class="carousel-caption d-none d-md-block">
+          <h1>Guitare Omega Dragon</h1>
+          <p>Série disponible maintenant</p>
+          <a href="#" class="btn btn-primary">Voir l'article</a>
+        </div>
+      </div>
+      <!-- Slide 2 -->
+      <div class="carousel-item">
+        <img src="/images/Humanity Proof.jpg" class="d-block w-100" alt="Image 2">
+        <div class="carousel-caption d-none d-md-block">
+          <h1>Humanity Proof</h1>
+          <p>Explorez notre nouvelle série de basses</p>
+          <a href="#" class="btn btn-primary">Découvrir</a>
+        </div>
+      </div>
+      <!-- Slide 3 -->
+      <div class="carousel-item">
+        <img src="/images/guitar-2183684_1280.jpg" class="d-block w-100" alt="Image 3">
+        <div class="carousel-caption d-none d-md-block">
+          <h1>Guitares Classiques</h1>
+          <p>Découvrez les modèles intemporels</p>
+          <a href="#" class="btn btn-primary">Voir plus</a>
+        </div>
+      </div>
+    </div>
 
-<button class="btn btn-primary">hola</button>
+    <!-- Controls -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+</div>
+
+<article>
+  <div class="container-fluid p-0">
+      <div class="row no-gutters">
+          <div class="col-4 position-relative">
+              <a href="/nosguitares">
+                  <img src="/images/Guitares.jpg" class="img-fluid w-100 h-100" style="object-fit: cover;" alt="Image 1">
+                  <div class="position-absolute top-50 start-50 translate-middle text-white p-2">
+                      <h5>Guitares</h5>
+                  </div>
+              </a>
+          </div>
+          <div class="col-4 position-relative">
+              <a href="/nosbasses">
+                  <img src="/images/Basses.jpg" class="img-fluid w-100 h-100" style="object-fit: cover;" alt="Image 2">
+                  <div class="position-absolute top-50 start-50 translate-middle text-white p-2">
+                      <h5>Basses</h5>
+                  </div>
+              </a>
+          </div>
+          <div class="col-4 position-relative">
+              <a href="/reparation">
+                  <img src="/images/Réparation.jpg" class="img-fluid w-100 h-100" style="object-fit: cover;" alt="Image 3">
+                  <div class="position-absolute top-50 start-50 translate-middle text-white p-2">
+                      <h5>Réparation</h5>
+                  </div>
+              </a>
+          </div>
+      </div>
+  </div>
+</article>
+  
+</article>
+</section>
+
+<section id="artisanat" class="container my-5">
+    <h2 class="text-center">Fabrication Artisanale de Guitares</h2>
+    <div class="row align-items-center">
+        <div class="col-md-6">
+            <p>
+                Chez Viola Corp, nous croyons que chaque guitare doit être unique et refléter la passion de son créateur. 
+                Nos luthiers expérimentés mettent leur savoir-faire à l'œuvre pour concevoir des guitares qui non seulement sonnent 
+                exceptionnellement bien, mais sont également esthétiquement remarquables. Chaque instrument est fabriqué à la main 
+                avec des matériaux soigneusement sélectionnés pour garantir la qualité et la durabilité.
+            </p>
+            <p>
+                Notre processus de fabrication commence par la sélection de bois de haute qualité, suivi de la conception 
+                personnalisée de chaque guitare. Chaque détail, des frettes au vernis, est minutieusement travaillé pour offrir 
+                une expérience de jeu inégalée. Que vous soyez un musicien amateur ou professionnel, nos guitares artisanales 
+                sauront répondre à vos attentes les plus élevées.
+            </p>
+            <p>
+                Nous vous invitons à visiter notre atelier et à découvrir le processus de fabrication de nos guitares. 
+                Vous pourrez même essayer certains de nos modèles lors de votre visite.
+            </p>
+        </div>
+        <div class="col-md-6 text-center">
+            <img src="/images/article fab.jpg" class="img-fluid" style="max-height: 300px;" alt="Atelier de fabrication de guitares">
+        </div>
+    </div>
+</section>
