--- a/pages/reparation.html
+++ b/pages/reparation.html
@@ -30,7 +30,10 @@
     </section>
 </div>
 
-<div class="text-center p-3">
-    <a href="/reparation" class="btn btn-primary">Demander un devis</a>
+<div class="text-center">
+    <button type="button" class="btn btn-primary" >Test</button>
 </div>
+
+
+
 
